Happy new year! Shoutout updates.

--- a/Home/index.html
+++ b/Home/index.html
@@ -104,12 +104,24 @@
         <li data-target="#transfi-carousel-1" data-slide-to="0" class="active"></li>
         <li data-target="#transfi-carousel-1" data-slide-to="1"></li>
         <li data-target="#transfi-carousel-1" data-slide-to="2"></li>
-        <li data-target="#transfi-carousel-1" data-slide-to="3"></li>
+        <!--<li data-target="#transfi-carousel-1" data-slide-to="3"></li>-->
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox" id="whats-new">
         <div class="item active section"
+             style="background-image: url('images/header-1.jpg'); padding-top: 750px">
+            <!-- Slide - Simbang Gabi Schedules -->
+            <a href="#schedules-special">
+                <div class="carousel-caption jumbotron backtext col-md-5">
+                    <h1>Merry Christmas and a Happy New Year!</h1>
+                    <p>See the Advent Mass schedules here.</p>
+                    <span class="attribution">"Adoration of the Shepherds" by Gerard van Honthorst, 1622</span>
+
+                </div>
+            </a>
+        </div>
+        <div class="item section"
              style="background-image: url('images/header-0.jpg'); padding-top: 750px">
             <!-- Slide - Parish Highlight -->
             <div class="carousel-caption jumbotron backtext">
@@ -118,35 +130,20 @@
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
-        <div class="item section"
-             style="background-image: url('images/header-1.jpg'); padding-top: 750px">
-            <!-- Slide - Simbang Gabi Schedules -->
-            <a href="#schedules-special">
-                <div class="carousel-caption jumbotron backtext col-md-5">
-                    <h1>Simbang Gabi Schedules</h1>
 
-                    <p>
-                        See the Simbang Gabi schedules here.
-                    </p>
-                    <span class="attribution">"Adoration of the Shepherds" by Gerard van Honthorst, 1622</span>
+        <!--<div class="item section"-->
+             <!--style="background-image: url('images/header-2.jpg'); padding-top: 750px">-->
+            <!--&lt;!&ndash; Slide - 12/12/14 &ndash;&gt;-->
+            <!--<a href="http://news.ourtransfi.org">-->
+                <!--<div class="carousel-caption jumbotron backtext col-md-5">-->
+                    <!--<h1>Happy Anniversary, Transfi!</h1>-->
 
-                </div>
-            </a>
-        </div>
+                    <!--<p>The parish celebrated its 12th year anniversary last December 12, 2014.-->
+                    <!--</p>-->
 
-        <div class="item section"
-             style="background-image: url('images/header-2.jpg'); padding-top: 750px">
-            <!-- Slide - 12/12/14 -->
-            <a href="http://news.ourtransfi.org">
-                <div class="carousel-caption jumbotron backtext col-md-5">
-                    <h1>Happy Anniversary, Transfi!</h1>
-
-                    <p>The parish celebrated its 12th year anniversary last December 12, 2014.
-                    </p>
-
-                </div>
-            </a>
-        </div>
+                <!--</div>-->
+            <!--</a>-->
+        <!--</div>-->
 
         <div class="item section"
              style="background-image: url('images/header-3.jpg'); padding-top: 750px">
