Added Year of the Poor message from the CBCP.

--- a/Home/index.html
+++ b/Home/index.html
@@ -112,13 +112,18 @@
         <div class="item active section"
              style="background-image: url('images/header-1.jpg'); padding-top: 750px">
             <!-- Slide - Simbang Gabi Schedules -->
-            <a href="#schedules-special">
                 <div class="carousel-caption jumbotron backtext col-md-5">
                     <h1>Merry Christmas and a Happy New Year!</h1>
-                    <p>See the Advent Mass schedules here.</p>
-                    <span class="attribution">"Adoration of the Shepherds" by Gerard van Honthorst, 1622</span>
-
                 </div>
+        </div>
+        <div class="item section"
+             style="background-image: url('images/yearofthepoor/header.jpg'); padding-top: 750px">
+            <!-- Slide - Simbang Gabi Schedules -->
+            <a href="yearofthepoor/">
+            <div class="carousel-caption jumbotron backtext col-md-5">
+                <h1>The Year of the Poor 2015</h1>
+                <p>A message from the CBCP. Click here to read more.</p>
+            </div>
             </a>
         </div>
         <div class="item section"
@@ -130,32 +135,17 @@
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
-
         <!--<div class="item section"-->
-             <!--style="background-image: url('images/header-2.jpg'); padding-top: 750px">-->
-            <!--&lt;!&ndash; Slide - 12/12/14 &ndash;&gt;-->
-            <!--<a href="http://news.ourtransfi.org">-->
-                <!--<div class="carousel-caption jumbotron backtext col-md-5">-->
-                    <!--<h1>Happy Anniversary, Transfi!</h1>-->
+             <!--style="background-image: url('images/header-3.jpg'); padding-top: 750px">-->
+            <!--&lt;!&ndash; Slide - Word of Life &ndash;&gt;-->
+            <!--<a href="http://www.ourtransfi.org/wordoflife/">-->
+                <!--<div class="carousel-caption jumbotron backtext">-->
+                    <!--<h1>Word of Life</h1>-->
 
-                    <!--<p>The parish celebrated its 12th year anniversary last December 12, 2014.-->
-                    <!--</p>-->
-
+                    <!--<p>December slides are now available for download.</p>-->
                 <!--</div>-->
             <!--</a>-->
         <!--</div>-->
-
-        <div class="item section"
-             style="background-image: url('images/header-3.jpg'); padding-top: 750px">
-            <!-- Slide - Word of Life -->
-            <a href="http://www.ourtransfi.org/wordoflife/">
-                <div class="carousel-caption jumbotron backtext">
-                    <h1>Word of Life</h1>
-
-                    <p>December slides are now available for download.</p>
-                </div>
-            </a>
-        </div>
     </div>
 
     <!-- Controls -->
@@ -245,8 +235,8 @@
 </div>
 
 <div class="container" style="padding-bottom: 32px">
-    <div class="col-sm-12"><h2 id="schedules">Liturgical Services</h2></div>
-    <div class="col-md-6">
+    <div class="col-md-6 col-md-offset-2"><h2 id="schedules">Liturgical Services</h2></div>
+    <div class="col-md-6 col-md-offset-2">
         <h3>Sunday Masses</h3>
         Masses are available during:
         <ul>
@@ -268,37 +258,6 @@
         Baptismal arrangements are available every Sunday at 11:30 pm.
 
         <p>For other services, please inquire at the Parish Office.</p>
-    </div>
-    <div class="col-md-6">
-        <h3 id="schedules-special">Advent Mass Schedules</h3>
-
-        <h4>Simbang Gabi sa Transfi</h4>
-        <ul>
-            <li>15-23 December 2014 (8:30 pm)</li>
-            <li>16-24 December 2014 (4:30 am)</li>
-        </ul>
-
-        <h4>Christmas Eve Mass</h4>
-        Christmas Eve Mass will be held at 11:00 pm.
-
-        <h4>Christmas Day Masses </h4>
-        <ul>
-            <li>8:00 am</li>
-            <li>9:30 am</li>
-            <li>5:00 pm</li>
-            <li>6:30 pm</li>
-        </ul>
-
-        <h4>New Year's Eve Mass</h4>
-        New Year's Eve Mass will be held at 9:00 pm.
-
-        <h4>New Year's Day Mass</h4>
-        <ul>
-            <li>8:00 am</li>
-            <li>9:30 am</li>
-            <li>5:00 pm</li>
-            <li>6:30 pm</li>
-        </ul>
     </div>
 </div>
 
