--- a/Home/wordoflife/index.html
+++ b/Home/wordoflife/index.html
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400'
-          rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet'
+          type='text/css'>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
     <link rel="stylesheet" href="../css/ourtransfi.css">
