Added the original PDF and link under docs.

--- a/Home/yearofthepoor/index.html
+++ b/Home/yearofthepoor/index.html
@@ -104,7 +104,8 @@
 
         <p>In the <i>sign</i> of this crucified Lord, now resurrected, we your Pastors, invite you
             to the
-            celebration of the Year of the Poor. <a href="#ref-2">ii</a> Behold Jesus, poor. No image
+            celebration of the Year of the Poor. <a href="#ref-2">ii</a> Behold Jesus, poor. No
+            image
             of Jesus, poor, surpasses
             this one. Jesus hangs from his Cross stripped of his clothes, his dignity, his
             possessions, his
@@ -123,7 +124,8 @@
             season, a
             waterfall when rainy.</p>
 
-        <p>On his Cross, he is with you - God with you. <a href="#ref-3">iii</a> He has taken on your
+        <p>On his Cross, he is with you - God with you. <a href="#ref-3">iii</a> He has taken on
+            your
             nakedness, your
             vulnerability, your hunger, your illness, your shame. You once thought you could escape
             the
@@ -372,7 +374,8 @@
             and
             totally loved.</p>
 
-        <p>We have exchanged this prize, this pearl of great price <a href="#ref-19">xix</a> , for the
+        <p>We have exchanged this prize, this pearl of great price <a href="#ref-19">xix</a> , for
+            the
             compulsive conservation of
             conceptual castles, for the anxious pettiness of rules and regulations, for the
             obsessive
@@ -426,13 +429,19 @@
             <br/>CBCP President</p>
 
         <div class="thumbnail">
-            <img src="../images/yearofthepoor/logo.jpg" style="max-height: 400px"/>
+            <a href="../images/yearofthepoor/logo.jpg"><img src="../images/yearofthepoor/logo.jpg"
+                                                            style="max-height: 400px"/></a>
         </div>
 
+        <h2>Downloads</h2>
+        <ul>
+            <li><a href="docs/CBCP%20Pastoral%20Message%20-%20Year%20of%20the%20Poor.pdf">Download
+                this document as a PDF for offline reading.</a></li>
+            <li><a href="../images/yearofthepoor/logo.jpg">The official logo of the Year of the Poor
+                (above)</a></li>
+        </ul>
 
-    </div>
 
-    <div class="col-sm-12 bodytext">
         <h2>References</h2>
 
         <p><span id="ref-1">i</span> cf. Spiritual Exercises of St. Ignatius: Colloquy of the First
