--- a/Home/yearofthepoor/index.html
+++ b/Home/yearofthepoor/index.html
@@ -13,7 +13,7 @@
     <title>Year of the Poor 2015</title>
     <meta name="description"
           content="The CBCP Message on the opening of the Year of the Poor 2015."/>
-    <meta name="author" content="SGD Socrates B. Villegas"/>
+    <meta name="author" content="Socrates B. Villegas"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Facebook Open Graph Metadata -->
