--- a/Home/index.html
+++ b/Home/index.html
@@ -104,17 +104,17 @@
         <li data-target="#transfi-carousel-1" data-slide-to="0" class="active"></li>
         <li data-target="#transfi-carousel-1" data-slide-to="1"></li>
         <li data-target="#transfi-carousel-1" data-slide-to="2"></li>
-        <!--<li data-target="#transfi-carousel-1" data-slide-to="3"></li>-->
+        <li data-target="#transfi-carousel-1" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox" id="whats-new">
         <div class="item active section"
              style="background-image: url('images/header-1.jpg'); padding-top: 750px">
-            <!-- Slide - Simbang Gabi Schedules -->
-                <div class="carousel-caption jumbotron backtext col-md-5">
-                    <h1>Merry Christmas and a Happy New Year!</h1>
-                </div>
+            <div class="carousel-caption jumbotron backtext">
+                <h1>The Transfiguration<br/>of Christ Parish</h1>
+                <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
+            </div>
         </div>
         <div class="item section"
              style="background-image: url('images/yearofthepoor/header.jpg'); padding-top: 750px">
@@ -131,21 +131,20 @@
             <!-- Slide - Parish Highlight -->
             <div class="carousel-caption jumbotron backtext">
                 <h1>The Transfiguration<br/>of Christ Parish</h1>
-
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
-        <!--<div class="item section"-->
-             <!--style="background-image: url('images/header-3.jpg'); padding-top: 750px">-->
-            <!--&lt;!&ndash; Slide - Word of Life &ndash;&gt;-->
-            <!--<a href="http://www.ourtransfi.org/wordoflife/">-->
-                <!--<div class="carousel-caption jumbotron backtext">-->
-                    <!--<h1>Word of Life</h1>-->
+        <div class="item section"
+             style="background-image: url('images/header-3.jpg'); padding-top: 750px">
+            <!-- Slide - Word of Life -->
+            <a href="http://www.ourtransfi.org/wordoflife/">
+                <div class="carousel-caption jumbotron backtext">
+                    <h1>Word of Life</h1>
 
-                    <!--<p>December slides are now available for download.</p>-->
-                <!--</div>-->
-            <!--</a>-->
-        <!--</div>-->
+                    <p>December slides are now available for download.</p>
+                </div>
+            </a>
+        </div>
     </div>
 
     <!-- Controls -->
