--- a/Home/wordoflife/index.html
+++ b/Home/wordoflife/index.html
@@ -10,17 +10,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Word of Life - Downloads</title>
+    <title>Word of Life Downloads</title>
     <meta name="description"
-          content="Word of Life presentation downloads"/>
+          content="January 2015 reflections available!"/>
     <meta name="author" content="Jeriel Jan del Prado"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Facebook Open Graph Metadata -->
-    <meta property="og:title" content="Word of Life - Downloads" />
+    <meta property="og:title" content="Word of Life Downloads" />
     <meta property="og:site_name" content="The Transfiguration of Christ Parish"/>
     <meta property="og:url" content="http://www.ourtransfi.org/wordoflife/"/>
-    <meta property="og:description" content="Download the latest monthly Word of Life presentations here."/>
+    <meta property="og:description" content="January 2015 reflections available!"/>
     <meta property="og:image" content="http://www.ourtransfi.org/images/header-2.jpg"/>
 
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -80,9 +80,13 @@
     <div class="col-sm-12 col-md-8 col-md-offset-2">
         <h1>Download</h1>
         <p>Download the monthly slides from Word of Life.</p>
+        <h2>2015</h2>
+        <ul>
+            <li><a href="keynotes/wol1501.pps">January</a></li>
+        </ul>
         <h2>2014</h2>
         <ul>
-            <li><a href="keynotes/wol1412.pps">December 2014</a></li>
+            <li><a href="keynotes/wol1412.pps">December</a></li>
         </ul>
     </div>
 </div>
