Added a welcoming banner for Pope Francis.

--- a/Home/index.html
+++ b/Home/index.html
@@ -110,6 +110,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox" id="whats-new">
         <div class="item active section"
+             style="background-image: url('images/header-pope.jpg'); padding-top: 750px">
+            <a href="http://www.papalvisit.ph">
+            <div class="carousel-caption jumbotron backtext">
+                <h1>Welcome Pope Francis!</h1>
+                <p>Pope Francis visits the Philippines from January 15 to 19.</p>
+            </div>
+            </a>
+        </div>
+        <div class="item section"
              style="background-image: url('images/header-1.jpg'); padding-top: 750px">
             <div class="carousel-caption jumbotron backtext">
                 <h1>The Transfiguration<br/>of Christ Parish</h1>
@@ -134,17 +143,17 @@
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
-        <div class="item section"
-             style="background-image: url('images/header-3.jpg'); padding-top: 750px">
-            <!-- Slide - Word of Life -->
-            <a href="http://www.ourtransfi.org/wordoflife/">
-                <div class="carousel-caption jumbotron backtext">
-                    <h1>Word of Life</h1>
+        <!--<div class="item section"-->
+             <!--style="background-image: url('images/header-3.jpg'); padding-top: 750px">-->
+            <!--&lt;!&ndash; Slide - Word of Life &ndash;&gt;-->
+            <!--<a href="http://www.ourtransfi.org/wordoflife/">-->
+                <!--<div class="carousel-caption jumbotron backtext">-->
+                    <!--<h1>Word of Life</h1>-->
 
-                    <p>January slides are now available for download.</p>
-                </div>
-            </a>
-        </div>
+                    <!--<p>January slides are now available for download.</p>-->
+                <!--</div>-->
+            <!--</a>-->
+        <!--</div>-->
     </div>
 
     <!-- Controls -->
