Removed the  welcoming banner for Pope Francis.

--- a/Home/index.html
+++ b/Home/index.html
@@ -109,16 +109,7 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox" id="whats-new">
-        <div class="item active section"
-             style="background-image: url('images/header-pope.jpg'); padding-top: 750px">
-            <a href="http://www.papalvisit.ph">
-            <div class="carousel-caption jumbotron backtext">
-                <h1>Welcome Pope Francis!</h1>
-                <p>Pope Francis visits the Philippines from January 15 to 19.</p>
-            </div>
-            </a>
-        </div>
-        <div class="item section"
+        <div class="item section active"
              style="background-image: url('images/header-1.jpg'); padding-top: 750px">
             <div class="carousel-caption jumbotron backtext">
                 <h1>The Transfiguration<br/>of Christ Parish</h1>
