Replaced Newss with Lent

--- a/Home/index.html
+++ b/Home/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
-                <li><a href="http://news.ourtransfi.org">News</a></li>
+                <li><a href="http://www.ourtransfi.org/lent2015/">Lent 2015</a></li>
                 <li><a href="#whats-new">What's New</a></li>
                 <li><a href="#about-parish">About</a></li>
                 <li><a href="#schedules">Schedules</a></li>
