--- a/Home/wordoflife/index.html
+++ b/Home/wordoflife/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
-                <li><a href="http://news.ourtransfi.org">News</a></li>
+                <li><a href="http://www.ourtransfi.org/lent2015/">Lent 2015</a></li>
                 <li><a href="http://www.ourtransfi.org/wordoflife">Word of Life</a></li>
             </ul>
         </div>
