--- a/Home/calendar/index.html
+++ b/Home/calendar/index.html
@@ -85,10 +85,11 @@
         <p> Looking only for Lent events? This year's Lent calendar is available <a
                 href="http://www.ourtransfi.org/lent2015">here.</a></p>
     </div>
+
     <div class="col-sm-12">
         <!-- Embedded Google Calendar -->
-        <iframe src="https://www.google.com/calendar/embed?title=The%20Transfiguration%20of%20Christ%20Parish%20Calendar&amp;height=500&amp;wkst=1&amp;hl=en&amp;bgcolor=%23FFFFFF&amp;src=l1ah0n0m59630t0hra95t475p8%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=Asia%2FManila"
-                style=" border-width:0 " width="1200" height="500" frameborder="0"
+        <iframe class="col-sm-12" src="https://www.google.com/calendar/embed?title=The%20Transfiguration%20of%20Christ%20Parish%20Calendar&amp;height=700&amp;wkst=1&amp;hl=en&amp;bgcolor=%23FFFFFF&amp;src=l1ah0n0m59630t0hra95t475p8%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=Asia%2FManila"
+                style=" border-width:0 " frameborder="0" height="700"
                 scrolling="no"></iframe>
     </div>
     <div class="col-sm-12">
