--- a/Home/index.html
+++ b/Home/index.html
@@ -234,8 +234,13 @@
 </div>
 
 <div class="container" style="padding-bottom: 32px">
-    <div class="col-md-6 col-md-offset-2"><h2 id="schedules">Liturgical Services</h2></div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-sm-12"><h2 id="schedules">Liturgical Services</h2></div>
+    <div class="col-md-6">
+
+        <h3>Parish Calendar</h3>
+        The Parish Calendar can be viewed fully <a href="calendar/">here.</a> For the season of Lent, a list of its events are available <a href="lent2015/">here.</a>
+
+
         <h3>Sunday Masses</h3>
         Masses are available during:
         <ul>
@@ -258,6 +263,11 @@
 
         <p>For other services, please inquire at the Parish Office.</p>
     </div>
+    <div class="col-md-6">
+        <h3>Events</h3>
+        <iframe class="col-sm-12" src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=650&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=l1ah0n0m59630t0hra95t475p8%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=Asia%2FManila" style=" border-width:0 " height="650" frameborder="0" scrolling="no"></iframe>
+    </div>
+
 </div>
 
 
