Updated contact info (no Mondays, admin@ourtransfi.org getting better.)

--- a/Home/index.html
+++ b/Home/index.html
@@ -305,11 +305,11 @@
     <div class="col-md-6">
         <h2 id="contact-us">Contact Us</h2>
 
-        <p>For general inquiries and concerns, contact us via our telephone number:
+        <p>For general inquiries and concerns, contact us via our telephone number (available every day, except Monday):
             <br/><span style="font-weight: bold">(02) 570-2722</span>
             <br/>You can also contact us by leaving a message on our Facebook page.</p>
 
-        <p>For website-related concerns and feedback, email <a href="mailto:admin@ourtransfi.org">admin@ourtransfi.org</a>.
+        <p>You can also email <a href="mailto:admin@ourtransfi.org">admin@ourtransfi.org</a>.
             <br/><span style="font-weight: bold">Feedback is highly appreciated!</span></p>
         <a class="btn btn-primary" role="button"
            href="http://www.facebook.com/ourtransfi">facebook.com/ourtransfi</a>
