--- a/Home/pages/lent-2015.html
+++ b/Home/pages/lent-2015.html
@@ -1,94 +1,14 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Lent and Easter 2015 - Program of Activities</title>
-    <meta name="description"
-          content="A list of all the events and dates during Lent in the Transfiguration of Christ Parish."/>
-    <meta name="author" content="Jeriel Jan del Prado"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+---
+layout: default
 
-    <!-- Facebook Open Graph Metadata -->
-    <meta property="og:title" content="Lent and Easter 2015 - Program of Activities" />
-    <meta property="og:site_name" content="The Transfiguration of Christ Parish"/>
-    <meta property="og:url" content="http://www.ourtransfi.org/lent2015/"/>
-    <meta property="og:description" content="A list of all the events and dates during Lent in the Transfiguration of Christ Parish."/>
-    <meta property="og:image" content="http://www.ourtransfi.org/lent2015/fb.jpg"/>
+title: Lent 2015
+description: A list of all the events and dates during Lent in the Transfiguration of Christ Parish.
+subtext: Program of Activities
+style: "background-color: purple"
+css: lent2015.css
+permalink: /lent2015/
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <style>
-        body {
-            padding-top: 50px;
-            padding-bottom: 20px;
-        }
-    </style>
-
-    <style>
-        .sched-date {
-            font-weight: 700;
-            font-size: 120%;
-        }
-        #schedule p {
-            padding-top: 32px;
-        }
-
-        .sched-title {
-            font-weight: 600;
-        }
-    </style>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
-
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet'
-          type='text/css'>
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
-    <link rel="stylesheet" href="../css/ourtransfi.css">
-</head>
-<body>
-<!--[if lt IE 7]>
-<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a
-        href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-<div class="navbar navbar-fixed-top" role="navigation" id="navigation-bar">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="http://www.ourtransfi.org/">Transfiguration of Christ Parish</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-links">
-            <ul class="nav navbar-nav">
-                <li><a href="http://www.ourtransfi.org/lent2015/">Lent 2015</a></li>
-                <li><a href="http://www.ourtransfi.org/wordoflife">Word of Life</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<div class="jumbotron section" id="section-1" style="background-color: purple">
-    <div class="container backtext">
-        <div class="col-md-12">
-            <h1>Lent and Easter 2015</h1>
-
-            <p>Program of Activities</p>
-        </div>
-    </div>
-
-</div>
+---
 
 <div class="container" style="padding-bottom: 32px">
     <div id="schedule" class="col-sm-12 col-md-8 col-md-offset-2">
@@ -224,23 +144,3 @@
 
     </div>
 </div>
-
-<!-- /container -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-<script src="../js/bootstrap.min.js"></script>
-
-<!-- Google Analytics -->
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-57620230-2', 'auto');
-    ga('send', 'pageview');
-
-</script>
-
-</body>
-</html>
