--- a/Home/index.html
+++ b/Home/index.html
@@ -56,65 +56,7 @@ layout: base
     </div>
 </div>
 <div id="transfi-carousel-1" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#transfi-carousel-1" data-slide-to="0" class="active"></li>
-        <li data-target="#transfi-carousel-1" data-slide-to="1"></li>
-        <li data-target="#transfi-carousel-1" data-slide-to="2"></li>
-        <li data-target="#transfi-carousel-1" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox" id="whats-new">
-        <div class="item section active"
-             style="background-image: url('images/header-1.jpg'); padding-top: 750px">
-            <div class="carousel-caption jumbotron backtext">
-                <h1>The Transfiguration<br/>of Christ Parish</h1>
-                <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
-            </div>
-        </div>
-        <div class="item section"
-             style="background-image: url('images/yearofthepoor/header.jpg'); padding-top: 750px">
-            <!-- Slide - Simbang Gabi Schedules -->
-            <a href="yearofthepoor/">
-            <div class="carousel-caption jumbotron backtext col-md-5">
-                <h1>The Year of the Poor 2015</h1>
-                <p>A message from the CBCP. Click here to read more.</p>
-            </div>
-            </a>
-        </div>
-        <div class="item section"
-             style="background-image: url('images/header-0.jpg'); padding-top: 750px">
-            <!-- Slide - Parish Highlight -->
-            <div class="carousel-caption jumbotron backtext">
-                <h1>The Transfiguration<br/>of Christ Parish</h1>
-                <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
-            </div>
-        </div>
-        <!--<div class="item section"-->
-             <!--style="background-image: url('images/header-3.jpg'); padding-top: 750px">-->
-            <!--&lt;!&ndash; Slide - Word of Life &ndash;&gt;-->
-            <!--<a href="http://www.ourtransfi.org/wordoflife/">-->
-                <!--<div class="carousel-caption jumbotron backtext">-->
-                    <!--<h1>Word of Life</h1>-->
-
-                    <!--<p>January slides are now available for download.</p>-->
-                <!--</div>-->
-            <!--</a>-->
-        <!--</div>-->
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" data-target="#transfi-carousel-1" role="button"
-       data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" data-target="#transfi-carousel-1" role="button"
-       data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+    {% include comp-carousel.html %}
 </div>
 
 <div class="container" style="padding-bottom: 32px">
