Updated Holy Week with Good Friday procession, updated sync code to only consider filesize differences, fixed icon parsing for Facebook Open Graph.

--- a/Home/index.html
+++ b/Home/index.html
@@ -1,5 +1,6 @@
 ---
 layout: base
+icon: /images/image-01a.jpg
 ---
 
 <body data-spy="scroll" data-target="#navbar-links" data-offset="90">
@@ -25,7 +26,7 @@ layout: base
         <span itemprop="postalCode" content="{{ site.address_postalCode }}"></span>
     </div>
     <span itemprop="email" content="{{ site.email }}"></span>
-    <span itemprop="logo" content="/images/TOCP-Logo-Web.png"></span>
+    <span itemprop="logo" content="{{ site.icon }}"></span>
     <span itemprop="telephone" content="{{ site.contact }}"></span>
     <span itemprop="url" content="{{ site.url }}"></span>
 </div>
