Rearranged header links. Removed Lent and replaced it with the generic Calendar

--- a/Home/index.html
+++ b/Home/index.html
@@ -46,11 +46,11 @@ icon: /images/image-01a.jpg
         </div>
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
-                <li><a href="/lent2015">Lent 2015</a></li>
                 <li><a href="#whats-new">What's New</a></li>
                 <li><a href="#about-parish">About</a></li>
                 <li><a href="#schedules">Schedules</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
+                <li><a href="/calendar">Calendar</a></li>
                 <li><a href="/wordoflife">Word of Life</a></li>
             </ul>
         </div>
