--- a/Home/index.html
+++ b/Home/index.html
@@ -138,7 +138,7 @@ icon: /images/image-01a.jpg
     <div class="col-md-6">
 
         <h3>Parish Calendar</h3>
-        The Parish Calendar can be viewed fully <a href="calendar/">here.</a> For the season of Lent, a list of its events are available <a href="lent2015/">here.</a>
+        The Parish Calendar can be viewed fully <a href="calendar/">here.</a>
 
 
         <h3>Sunday Masses</h3>
