--- a/Home/index.html
+++ b/Home/index.html
@@ -135,6 +135,11 @@ icon: /images/image-01a.jpg
 
 <div class="container" style="padding-bottom: 32px">
     <div class="col-sm-12"><h2 id="schedules">Liturgical Services</h2></div>
+
+    <div class="col-sm-12">
+        {% include event-highlight.html %}
+    </div>
+
     <div class="col-md-6">
 
         <h3>Parish Calendar</h3>
