--- a/Home/index.html
+++ b/Home/index.html
@@ -3,7 +3,7 @@ layout: base
 icon: /images/image-01a.jpg
 ---
 
-<body data-spy="scroll" data-target="#navbar-links" data-offset="90">
+<body data-target="#navbar-links" data-offset="90">
 <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a
         href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -31,31 +31,8 @@ icon: /images/image-01a.jpg
     <span itemprop="url" content="{{ site.url }}"></span>
 </div>
 
-<div class="navbar navbar-fixed-top" role="navigation" id="navigation-bar">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#whats-new">Transfiguration of Christ
-                Parish</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-links">
-            <ul class="nav navbar-nav">
-                <li><a href="#whats-new">What's New</a></li>
-                <li><a href="#about-parish">About</a></li>
-                <li><a href="#schedules">Schedules</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
-                <li><a href="/calendar">Calendar</a></li>
-                <li><a href="/wordoflife">Word of Life</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+{% include header-navigation.html %}
+
 <div id="transfi-carousel-1" class="carousel slide" data-ride="carousel">
     {% include comp-carousel.html %}
 </div>
