Revamped the main page with fewer content
The main page has been condensed with straightforward links to Liturgical Services, Upcoming Events and About the Parish. The blue Facebook button has been removed, and the embedded agenda from Google Calendar was removed (along with the entire section) since it's now more relevant in Liturgical Services.

--- a/Home/index.html
+++ b/Home/index.html
@@ -37,39 +37,32 @@ icon: /images/image-01a.jpg
     {% include comp-carousel.html %}
 </div>
 
-<div class="container" style="padding-bottom: 32px">
-    <div class="hidden-sm col-md-6">
-        <div class="thumbnail">
-            <a href="images/TOCP-Logo-Web.png">
-                <img src="images/TOCP-Logo-Web.png"
-                     alt="The Transfiguration of Christ Parish Logo"/>
-            </a>
-        </div>
-    </div>
-    <div class="col-sm-12 col-md-6">
-        <h2 id="about-parish">About the Parish</h2>
 
-        <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of
-            Antipolo, having been canonically erected on December 12, 2002. The parish church is
-            located along M.L. Quezon St. Ext., Brgy San Roque, Antipolo City.</p>
-        <ul>
-            <li>The parish Church was dedicated on December 12, 2012.</li>
-            <li>Dedication Rites were presided by Most Rev. Francisco de Leon, DD (Auxiliary Bishop
-                of
-                Antipolo) together with Most Rev. Roberto Mallari (Bishop of San Jose, Nueva Ecija)
-                & Most Rev. Jose Rojas (Bishop of Libmanan, Camarines Sur).
-            </li>
-            <li>The parish has its own Columbarium & Lazarus' Memorial Chapels.</li>
-        </ul>
+<div class="container" style="margin-top: 64px; margin-bottom: 64px;">
+
+    <div class="col-md-4">
+        <h2>Liturgical Services</h2>
+        <p>The Parish regularly holds the sacraments from time to time.</p>
+        <p><a class="btn btn-default" href="/services/" role="button">Read more</a> </p>
     </div>
 
-    <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <a class="btn btn-primary center-block btn-lg" role="button"
-           href="http://news.ourtransfi.org" style="font-size: x-large">News and
-            Announcements</a>
+    <div class="col-md-4">
+        <h2>Upcoming Events</h2>
+        <p>The official Facebook page of the Transfiguration of Christ Parish has more details on upcoming and ongoing events in the Parish.</p>
+        <p><a class="btn btn-default" href="http://www.facebook.com/ourtransfi" role="button">Read more</a> </p>
     </div>
+
+    <div class="col-md-4">
+        <h2>About the Parish</h2>
+        <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of Antipolo...</p>
+        <p><a class="btn btn-default" href="#section-2" role="button">Read more</a> </p>
+    </div>
+    <!--<div class="col-sm-12 col-md-6 col-md-offset-3">-->
+    <!--{% include event-highlight.html %}-->
+    <!--</div>-->
+
+
 </div>
-
 
 <div class="container-fluid">
     <div class="col-xs-6 col-md-3">
@@ -97,7 +90,7 @@ icon: /images/image-01a.jpg
 <div class="jumbotron section" id="section-2" style="padding-top: 300px">
     <div class="container backtext">
         <div class="col-md-offset-6" style="text-align: right">
-            <h2>Mission</h2>
+            <h2>Vision</h2>
 
             <p>"Isang Sambayanang Katoliko sa Diyosesis ng Antipolo na binubuo ng
                 mga Munting Sambayanang Katoliko na hinuhubog sa pagbibiyaya at pagtawag ng
@@ -111,47 +104,37 @@ icon: /images/image-01a.jpg
 </div>
 
 <div class="container" style="padding-bottom: 32px">
-    <div class="col-sm-12"><h2 id="schedules">Liturgical Services</h2></div>
+    <div class="hidden-sm col-md-6">
+        <div class="thumbnail">
+            <a href="images/TOCP-Logo-Web.png">
+                <img src="images/TOCP-Logo-Web.png"
+                     alt="The Transfiguration of Christ Parish Logo"/>
+            </a>
+        </div>
+    </div>
+    <div class="col-sm-12 col-md-6">
+        <h2 id="about-parish">About the Parish</h2>
 
-    <!--<div class="col-sm-12 col-md-6 col-md-offset-3">-->
-        <!--{% include event-highlight.html %}-->
-    <!--</div>-->
-
-    <div class="col-md-6">
-
-        <h3>Parish Calendar</h3>
-        The Parish Calendar can be viewed fully <a href="calendar/">here.</a>
-
-
-        <h3>Sunday Masses</h3>
-        Masses are available during:
+        <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of
+            Antipolo, having been canonically erected on December 12, 2002. The parish church is
+            located along M.L. Quezon St. Ext., Brgy San Roque, Antipolo City.</p>
         <ul>
-            <li>6:30 am</li>
-            <li>8:00 am</li>
-            <li>9:30 am</li>
-            <li>5:00 pm</li>
-            <li>6:30 pm</li>
+            <li>The parish Church was dedicated on December 12, 2012.</li>
+            <li>Dedication Rites were presided by Most Rev. Francisco de Leon, DD (Auxiliary Bishop
+                of
+                Antipolo) together with Most Rev. Roberto Mallari (Bishop of San Jose, Nueva Ecija)
+                & Most Rev. Jose Rojas (Bishop of Libmanan, Camarines Sur).
+            </li>
+            <li>The parish has its own Columbarium & Lazarus' Memorial Chapels.</li>
         </ul>
-
-        <h3>Saturday Mass (Anticipated Mass)</h3>
-        Saturday masses are held at 6:00 pm.
-
-        <h3>Daily Mass</h3>
-        Daily masses are held at 6:15 am, from Monday to Saturday.
-        <br/>Masses are also held at 6:00 pm every Wednesday and the first Friday of the month.
-
-        <h3>Baptism</h3>
-        Baptismal arrangements are available every Sunday at 11:30 pm.
-
-        <p>For other services, please inquire at the Parish Office.</p>
-    </div>
-    <div class="col-md-6">
-        <h3>Events</h3>
-        <iframe class="col-sm-12" src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=650&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=l1ah0n0m59630t0hra95t475p8%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=Asia%2FManila" style=" border-width:0 " height="650" frameborder="0" scrolling="no"></iframe>
     </div>
 
+    <!--<div class="col-xs-12 col-md-6 col-md-offset-3">-->
+        <!--<a class="btn btn-primary center-block btn-lg" role="button"-->
+           <!--href="http://www.facebook.com/ourtransfi" style="font-size: x-large">News and-->
+            <!--Announcements</a>-->
+    <!--</div>-->
 </div>
-
 
 <div class="container-fluid">
     <div class="col-xs-6 col-md-3">
@@ -191,15 +174,15 @@ icon: /images/image-01a.jpg
             <br/><span style="font-weight: bold">{{ site.contact }}</span>
             <br/>You can also contact us by leaving a message on our Facebook page.</p>
 
-        <p>You can also email <a href="mailto:{{ site.email }}">{{ site.email }}</a>.
-            <br/><span style="font-weight: bold">Feedback is highly appreciated!</span></p>
         <a class="btn btn-primary" role="button"
            href="http://www.facebook.com/ourtransfi">facebook.com/ourtransfi</a>
 
+        <p>Please take note that various liturgical services, such as <a href="/services/#baptism">baptismal rites</a> and <a href="/services/#matrimony-weddings">weddings</a> are all detailed further in the <a href="/services/">Liturgical Services</a> page. </p>
+
         <h2>Location</h2>
 
-        <p>The Transfiguration of Christ Parish is located at the M.L. Quezon St. Ext. in Antipolo
-            City, Rizal. For convenience, refer to the Google Map on the right, or click the button
+        <p>The Transfiguration of Christ Parish is located at the <strong>M.L. Quezon St. Ext. in Antipolo
+            City, Rizal.</strong> For convenience, refer to the Google Map on the right, or click the button
             below to view it in Google Maps.</p>
         <a class="btn btn-default" role="button"
            href="https://www.google.com.ph/maps/place/Transfiguration+Of+Christ+Parish/@{{ site.address_latitude }} , {{ site.address_longitude }},18z/data=!4m2!3m1!1s0x3397c0b9c5cadb3f:0x55deeaf5184b2631?hl=en">Navigate
