Added the accented class which represents blocks with the accent color and white for text.
This change was introduced so that the useful links in the main page are emphasized.

--- a/Home/index.html
+++ b/Home/index.html
@@ -38,25 +38,30 @@ icon: /images/image-01a.jpg
 </div>
 
 
-<div class="container" style="margin-top: 64px; margin-bottom: 64px;">
+<div class="container accented" style="margin-top: 64px; margin-bottom: 64px; padding: 24px; border-radius: 10px">
 
-    <div class="col-md-4">
-        <h2>Liturgical Services</h2>
-        <p>The Parish regularly holds the sacraments from time to time.</p>
-        <p><a class="btn btn-default" href="/services/" role="button">Read more</a> </p>
+    <a href="/services/">
+    <div class="col-md-4 text-center">
+        <h2>Mass Schedules and Liturgical Services</h2>
+        <p>The Parish regularly holds the sacraments, blessings and devotions by schedule, by occasion and upon reservation. Click here to know more about the sacraments and schedules.</p>
     </div>
+    </a>
 
-    <div class="col-md-4">
+    <a href="http://www.facebook.com/ourtransfi">
+    <div class="col-md-4 text-center">
         <h2>Upcoming Events</h2>
-        <p>The official Facebook page of the Transfiguration of Christ Parish has more details on upcoming and ongoing events in the Parish.</p>
-        <p><a class="btn btn-default" href="http://www.facebook.com/ourtransfi" role="button">Read more</a> </p>
+        <p>For more details on upcoming and ongoing events, click here to visit the official page of the Parish.</p>
     </div>
+    </a>
 
-    <div class="col-md-4">
+    <a href="#section-2">
+    <div class="col-md-4 text-center">
         <h2>About the Parish</h2>
         <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of Antipolo...</p>
-        <p><a class="btn btn-default" href="#section-2" role="button">Read more</a> </p>
+        <p>Click here to scroll down and read more.</p>
     </div>
+    </a>
+
     <!--<div class="col-sm-12 col-md-6 col-md-offset-3">-->
     <!--{% include event-highlight.html %}-->
     <!--</div>-->
