Added all documents provided by the Parish Office for various liturgical services, and added a dedicated Downloads page that links them all
With the new documents in place, all pages in Liturgical Services have been updated to display links to download the files that are relevant for each sacrament or blessing.

--- a/Home/index.html
+++ b/Home/index.html
@@ -40,27 +40,31 @@ icon: /images/image-01a.jpg
 
 <div class="container accented" style="margin-top: 64px; margin-bottom: 64px; padding: 24px; border-radius: 10px">
 
+    <a href="#section-2">
+        <div class="col-md-4 text-center">
+            <h2>About the Parish</h2>
+            <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of Antipolo...</p>
+            <p>Click here to scroll down and read more.</p>
+        </div>
+    </a>
+
     <a href="/services/">
     <div class="col-md-4 text-center">
         <h2>Mass Schedules and Liturgical Services</h2>
         <p>The Parish regularly holds the sacraments, blessings and devotions by schedule, by occasion and upon reservation. Click here to know more about the sacraments and schedules.</p>
+        <p>Forms for various sacraments and blessings are also available for download.</p>
     </div>
     </a>
 
     <a href="http://www.facebook.com/ourtransfi">
     <div class="col-md-4 text-center">
         <h2>Upcoming Events</h2>
-        <p>For more details on upcoming and ongoing events, click here to visit the official page of the Parish.</p>
+        <p>The official page of the Transfiguration of Christ Parish holds announcements towards upcoming and ongoing events in the community.</p>
+        <p>Click here to visit the page in Facebook.</p>
     </div>
     </a>
 
-    <a href="#section-2">
-    <div class="col-md-4 text-center">
-        <h2>About the Parish</h2>
-        <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of Antipolo...</p>
-        <p>Click here to scroll down and read more.</p>
-    </div>
-    </a>
+
 
     <!--<div class="col-sm-12 col-md-6 col-md-offset-3">-->
     <!--{% include event-highlight.html %}-->
