Fixed Facebook Open Graph Metadata from displaying just the base page details
og:url was changed to adapt to the current page based on the permalink tag (Facebook kept jumping back to the base because the URL was constant) and tags were fixed for relative urls (icon) and correct tags (subtext --> description)

--- a/Home/pages/word-of-life.html
+++ b/Home/pages/word-of-life.html
@@ -5,7 +5,7 @@ title: Word of Life Downloads
 description: Monthly stories, reflections and prayers by Word of Life
 subtext: Monthly stories, reflections and prayers by Word of Life
 style: "background-image: url('/images/header-3.jpg')"
-icon: "http://www.ourtransfi.org/images/header-3.jpg"
+icon: "/images/header-3.jpg"
 permalink: /wordoflife/
 
 ---
