--- a/Home/index.html
+++ b/Home/index.html
@@ -138,6 +138,8 @@ icon: /images/image-01a.jpg
         </ul>
     </div>
 
+
+
     <!--<div class="col-xs-12 col-md-6 col-md-offset-3">-->
         <!--<a class="btn btn-primary center-block btn-lg" role="button"-->
            <!--href="http://www.facebook.com/ourtransfi" style="font-size: x-large">News and-->
@@ -168,9 +170,10 @@ icon: /images/image-01a.jpg
     </div>
 </div>
 
-<div class="jumbotron section" id="section-3" style="padding-top: 750px">
+<div class="jumbotron section" id="section-3">
     <div class="container backtext">
-        <div class="col-md-offset-6" style="text-align: right">
+        <div class="col-sm-12 center-block text-center">
+                <iframe width="630" height="472.5" src="https://www.youtube.com/embed/2v1qf2ZSa7s" frameborder="0" allowfullscreen style="padding: 32px; background-color: rgba(0,0,0,0.75)"></iframe>
         </div>
     </div>
 </div>
