Added feedback form, remade Year of the Poor article to Markdown format, readded Formations section, and fixed YouTube embed bug on smaller devices.

--- a/Home/index.html
+++ b/Home/index.html
@@ -172,8 +172,8 @@ icon: /images/image-01a.jpg
 
 <div class="jumbotron section" id="section-3">
     <div class="container backtext">
-        <div class="col-sm-12 center-block text-center">
-                <iframe width="630" height="472.5" src="https://www.youtube.com/embed/2v1qf2ZSa7s" frameborder="0" allowfullscreen style="padding: 32px; background-color: rgba(0,0,0,0.75)"></iframe>
+        <div class="col-sm-12 center-block text-center embed-responsive embed-responsive-4by3">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2v1qf2ZSa7s" allowfullscreen style="padding: 32px; background-color: rgba(0,0,0,0.75)"></iframe>
         </div>
     </div>
 </div>
