Added a shortform version of the links box on the home screen
The original links box occupies the entire screen on phones and smaller screens. As a fix, a shortform version is introduced and is only shown for xs and sm devices. The original links box is still displayed for md, lg and xl screens.

--- a/Home/index.html
+++ b/Home/index.html
@@ -37,8 +37,14 @@ icon: /images/image-01a.jpg
     {% include comp-carousel.html %}
 </div>
 
+<div class="container hidden-md hidden-lg" style="margin-top: 64px; margin-bottom: 64px;">
 
-<div class="container accented" style="margin-top: 64px; margin-bottom: 64px; padding: 24px; border-radius: 10px">
+    <h2>Liturgical Services</h2>
+    <p>For mass schedules, wedding inquiries, baptismal rites and more, click here to view <a href="/services/">Mass Schedules and Liturgical Services</a> available in the Parish.</p>
+
+</div>
+
+<div class="container accented hidden-xs hidden-sm" style="margin-top: 64px; margin-bottom: 64px; padding: 24px; border-radius: 10px">
 
     <a href="#section-2">
         <div class="col-md-4 text-center">
