Added a special feature about Our Lady of Czestochowa
- Markdown, images, assets and CSS included.
- Index has been updated with a snippet about Czestochowa.
- Adjusted navbar to always render in white, in order to change body colours in feature pages.
- Added a carousel page for Our Lady of Czestochowa

--- a/Home/index.html
+++ b/Home/index.html
@@ -142,6 +142,18 @@ icon: /images/image-01a.jpg
             </li>
             <li>The parish has its own Columbarium & Lazarus' Memorial Chapels.</li>
         </ul>
+
+        <h2>Our Lady of Czestochowa</h2>
+        <p>An icon received in June 17, 2014 from the National Shrine of Our Lady of Czestochowa in
+            Jasna Gora, Poland. Our Lady of Czestochowa is enthroned in the sanctuary area of the
+            Transfiguration of Christ Parish.</p>
+
+        <p>The parish first celebrated her feast day on August 26, 2014 (her feast day in Poland).
+            She is now the special patroness of the Transfiguration of Christ Parish. It is hoped
+            that devotion spread to Our Lady of Czestochowa and the parish may become a permanent
+            shrine to her in the Diocese of Antipolo and in the whole Philippines.</p>
+
+        <a href="/about/czestochowa">Read more about the Our Lady of Czestochowa</a>
     </div>
 
 
